--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -42,3 +42,71 @@
   color: #004fb0;
   transition: 0.4s;
 }
+
+@media (max-width: 820px) {
+
+  .Navbar {
+    width: 29.99rem;
+  }
+  .Logo {
+    width: 70px;
+    height: 70px;
+  }
+
+  .Refs li{
+    margin: 0 1rem;
+
+  }
+
+  .Refs li a {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  .Navbar {
+    width: 47.7rem;
+  }
+}
+
+@media (max-width: 412px) {
+
+  .Navbar {
+    width: 26rem;
+  }
+  .Refs li a {
+    font-size: 13px;
+  }
+
+}
+
+@media (max-width: 384px) {
+
+  .Navbar {
+    width: 24rem;
+  }
+
+  .Refs li a {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 360px) {
+  .Navbar {
+    width: 22.5rem;
+  }
+
+  .Refs li a {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 394px) {
+  .Refs li a {
+    font-size: 12px;
+  }
+
+  .Refs li {
+    margin: 0  0.5rem;
+  }
+}
