--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -43,36 +43,43 @@
   transition: 0.4s;
 }
 
-@media (max-width: 820px) {
+/*Mediaquery*/
+
+@media (max-width: 480px) {
 
   .Navbar {
-    width: 29.99rem;
-  }
-  .Logo {
-    width: 70px;
-    height: 70px;
+
+    width: 29.8rem;
   }
 
-  .Refs li{
-    margin: 0 1rem;
-
+  .Refs li {
+    margin: 0 0.9rem;
   }
 
-  .Refs li a {
+}
+
+@media (max-width: 429px) {
+  .Navbar {
+    width: 27rem;
+  }
+
+  .Refs li {
+    margin: 0 0.5;
+  }
+
+  .Refs  li a {
     font-size: 15px;
   }
 }
 
-@media (max-width: 768px) {
-  .Navbar {
-    width: 47.7rem;
-  }
-}
-
-@media (max-width: 412px) {
+@media (max-width: 415px) {
 
   .Navbar {
-    width: 26rem;
+    width: 25.8rem;
+  }  
+
+  .Refs li {
+    margin: 0 0.5rem;
   }
   .Refs li a {
     font-size: 13px;
@@ -80,33 +87,57 @@
 
 }
 
-@media (max-width: 384px) {
+@media (max-width: 376px) {
 
   .Navbar {
-    width: 24rem;
+    width: 23.5rem;
+  }  
+
+  .Logo {
+    width: 70px;
+    height: 75px;
+  }
+  .Refs li {
+    margin: 0 0.5rem;
+  }
+  .Refs li a {
+    font-size: 14px;
   }
 
-  .Refs li a {
-    font-size: 13px;
-  }
 }
 
 @media (max-width: 360px) {
+
   .Navbar {
-    width: 22.5rem;
-  }
-
-  .Refs li a {
-    font-size: 12px;
-  }
-}
-
-@media (max-width: 394px) {
-  .Refs li a {
-    font-size: 12px;
-  }
+    width: 23rem;
+  }  
 
   .Refs li {
-    margin: 0  0.5rem;
+    margin: 0 0.5rem;
   }
+  .Refs li a {
+    font-size: 14px;
+  }
+
 }
+
+@media (max-width: 321px) {
+
+  .Navbar {
+    width: 20rem;
+  }  
+
+  .Refs li {
+    margin: 0 0.4rem;
+  }
+
+  .Logo {
+    width: 60px;
+    height: 65px;
+  }
+  .Refs li a {
+    font-size: 12px;
+  }
+
+}
+
