--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -6,6 +6,9 @@
   /* -webkit-backdrop-filter: blur(10px) saturate(100%) contrast(100%); */
   background: rgba(196, 196, 196, 0.11);
   position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-backface-visibility: hidden;
   width: 100vw;
   height: 5.8rem;
   display: flex;
@@ -33,7 +36,7 @@
 }
 .Refs li a {
   text-decoration: none;
-  color: white;
+  color: white;   
   font-size: 18px;
 
 }
@@ -45,99 +48,81 @@
 
 /*Mediaquery*/
 
-@media (max-width: 480px) {
 
-  .Navbar {
-
-    width: 29.8rem;
-  }
-
-  .Refs li {
-    margin: 0 0.9rem;
-  }
-
-}
-
-@media (max-width: 429px) {
+@media (max-width: 428.1px) {
   .Navbar {
     width: 27rem;
   }
 
   .Refs li {
-    margin: 0 0.5;
+    margin: 0.8rem;
   }
 
-  .Refs  li a {
-    font-size: 15px;
-  }
-}
-
-@media (max-width: 415px) {
-
-  .Navbar {
-    width: 25.8rem;
-  }  
-
-  .Refs li {
-    margin: 0 0.5rem;
-  }
   .Refs li a {
     font-size: 13px;
   }
-
+  .Logo {
+    height: 5rem;
+  }
 }
 
-@media (max-width: 376px) {
 
+@media (max-width: 414.1px) {
+  .Navbar {
+    width: 25.7rem;
+  }
+}
+
+@media (max-width: 375.1px) {
   .Navbar {
     width: 23.5rem;
-  }  
-
-  .Logo {
-    width: 70px;
-    height: 75px;
   }
+
   .Refs li {
-    margin: 0 0.5rem;
-  }
-  .Refs li a {
-    font-size: 14px;
+    margin: 0.5rem;
   }
 
+  .Refs li a {
+    font-size: 11px;
+  }
+  .Refs {
+    margin-right: 0.5rem;
+  }
 }
 
-@media (max-width: 360px) {
-
+@media (max-width: 390.1px) {
   .Navbar {
-    width: 23rem;
-  }  
+    width: 24.5rem;
+  }
 
   .Refs li {
-    margin: 0 0.5rem;
+    margin: 0.5rem;
   }
-  .Refs li a {
-    font-size: 14px;
-  }
-
 }
 
-@media (max-width: 321px) {
 
-  .Navbar {
-    width: 20rem;
-  }  
+
+@media (max-width: 360.1px) {
 
   .Refs li {
-    margin: 0 0.4rem;
+    margin: 0.5rem;
+  }
+
+  .Refs {
+    margin-right: 1.2rem;
   }
 
   .Logo {
-    width: 60px;
-    height: 65px;
+    height: 4rem;
   }
-  .Refs li a {
-    font-size: 12px;
-  }
-
 }
+
+
+
+
+
+
+
+
+
 
