--- a/src/components/Box/style.module.css
+++ b/src/components/Box/style.module.css
@@ -66,3 +66,27 @@
   text-decoration: none;
   font-weight: bold;
 }
+
+
+/*Medua Querys*/
+
+@media (max-width: 811px) {
+ 
+  .cardcontainer {
+    width: 300px;
+    height: 380px;
+  }
+}
+
+
+@media (max-width: 429px) {
+  .cardcontainer {
+    width: 180px;
+    height: 180px;
+  }
+
+  .imagecontainer {
+    height: 210px;
+    width: 100%;
+  }
+}
