--- a/src/pages/Project/style.module.css
+++ b/src/pages/Project/style.module.css
@@ -20,7 +20,7 @@
 .containergrid {
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
   grid-gap: 1rem;
 }
@@ -29,4 +29,13 @@
   border: 2px solid #e7e7e7;
   border-radius: 4px;
   padding: .5rem;
+}
+
+
+/*Media Querys*/
+
+@media (max-width: 429px) {
+  .titleThird {
+    font-size: 2rem;
+  }
 }
