--- a/src/pages/Footer/style.module.css
+++ b/src/pages/Footer/style.module.css
@@ -19,3 +19,60 @@
   width: 50px;
   height: 50px;
 }
+
+/*Media Querys*/
+
+@media (max-width: 429px) {
+
+  .containerFooter {
+    height: 7rem;
+  }
+
+  .text {
+    font-weight: bold;
+    font-size: 0.7rem;
+  }
+  
+  .containerText {
+    display: flex;
+    flex-direction: column;
+    width: 15rem;
+    margin-right: 6rem;
+  }
+
+  .icons {
+    height: 20px;
+  }
+
+  .containerIcons {
+    display: flex;
+  }
+
+  .err {
+    font-weight: bold;
+    font-size: 0.7rem;
+    width: 14rem;
+  }
+}
+
+@media (max-width: 376px) {
+
+  .containerIcons {
+    margin-right: 8rem;
+  }
+
+  .containerIcons {
+    margin-left: 0;
+  }
+
+  .containerText {
+    margin-right: 1rem;
+  }
+
+}
+
+@media (max-width: 415px) {
+  .containerText {
+    margin-right: 1rem;
+  }
+} 
